--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -1,4 +1,4 @@
-name: Pylint
+name: Pytest
 on:
   push:
     branches:
@@ -17,7 +17,5 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
-        pip install pylint
-    - name: Analyse code with pylint
-      run: |
-        pylint -d C0301,W0614 --fail-under=8 **/*.py
+    - name: Run tests with pytest
+      run: pytest tests.py
