--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,6 @@
-numpy==1.25.2
-pandas==2.0.3
-pytest==7.1.2
-python-dateutil==2.8.2
-pytz==2023.3
-requests==2.31.0
-xlrd==2.0.1
+pandas>=1.4.0
+pytest
+python-dateutil
+pytz
+requests
+xlrd
