--- a/.github/workflows/tox.yml
+++ b/.github/workflows/tox.yml
@@ -38,4 +38,8 @@ jobs:
             3.10
             3.11
             3.12
-    - run: tox run
+    - name: Install tox
+      shell: bash
+      run: pip install --user --upgrade pip && pip install tox
+    - name: Execute Pytest, Pylint and Mypy tests
+      run: tox run
