don't support py37 anymore

--- a/tox.ini
+++ b/tox.ini
@@ -7,7 +7,7 @@ min_version = 4
 
 
 [testenv]
-base_python = py37, py38, py39, py310, py311, py312
+base_python = py38, py39, py310, py311, py312
 set_env =
     PYTHONPATH = .
 deps =
