update tox to test again multiple tox versions

--- a/tox.ini
+++ b/tox.ini
@@ -1,13 +1,10 @@
 [tox]
-requires =
-  tox >= 4.0
-env_list = pytest, mypy, pylint
 skipsdist = true
-min_version = 4
+isolated_build = True
+envlist = py38, py39, py310, py311, py312
 
 
 [testenv]
-base_python = py38, py39, py310, py311, py312
 set_env =
     PYTHONPATH = .
 deps =
