attempt to fix tox

--- a/tox.ini
+++ b/tox.ini
@@ -1,6 +1,8 @@
 [tox]
+requires =
+    tox>=4
 skipsdist = true
-envlist = py38, py39, py310, py311, py312
+env_list = py{38,39,310,311,312}-pytest, pylint, mypy
 
 
 [testenv]
