--- a/.github/workflows/tox.yml
+++ b/.github/workflows/tox.yml
@@ -40,9 +40,5 @@ jobs:
     - name: Install tox
       shell: bash
       run: pip install --user --upgrade pip && pip install tox
-    - name: Execute Pytest
-      run: tox run pytest
-    - name: Execute Pylint
-      run: tox run pylint
-    - name: Execute Mypy
-      run: tox run mypy
+    - name: Execute Pytest, Pylint and Mypy
+      run: tox -a -p all
