--- a/tox.ini
+++ b/tox.ini
@@ -2,7 +2,7 @@
 requires =
     tox>=4
 skipsdist = true
-env_list = py{38,39,310,311,312}-pytest, pylint, mypy
+env_list = py{38,39,310,311,312}
 
 
 [testenv]
@@ -10,32 +10,13 @@ set_env =
     PYTHONPATH = .
 deps =
     -r requirements.txt
-
-
-[testenv:pytest]
-description = unit tests
-deps =
     {[testenv]deps}
     pytest
-commands =
-    pytest tests.py --color=yes -s -rA {posargs}
-
-
-[testenv:mypy]
-description = static type checks with mypy
-deps =
-    {[testenv]deps}
     mypy
     pandas-stubs
     types-requests
-commands =
-    mypy elia --disallow-untyped-defs
-
-
-[testenv:pylint]
-description = static analysis with pylint
-deps =
-    {[testenv]deps}
     pylint
 commands =
+    pytest tests.py --color=yes -s -rA {posargs}
+    mypy elia --disallow-untyped-defs
     pylint elia -d C0301 -d C0116 -d C0114 -d E0401 -d W0613 --fail-under=7
