--- a/tox.ini
+++ b/tox.ini
@@ -1,8 +1,9 @@
 [tox]
 requires =
     tox>=4
-skipsdist = true
-env_list = py{38,39,310,311,312}
+isolated_build = true
+parallel_show_output = true
+env_list = py{38,39,310,311,312}, mypy, pylint
 
 
 [testenv]
@@ -11,11 +12,21 @@ set_env =
 deps =
     -r requirements.txt
     pytest
+commands =
+    pytest tests.py --color=yes -s -rA {posargs}
+
+[testenv:pylint]
+deps =
+    -r requirements.txt
+    pylint
+commands =
+    pylint elia -d C0301 -d C0116 -d C0114 -d E0401 -d W0613 --fail-under=7
+
+[testenv:mypy]
+deps =
+    -r requirements.txt
     mypy
     pandas-stubs
     types-requests
-    pylint
 commands =
-    pytest tests.py --color=yes -s -rA {posargs}
     mypy elia --disallow-untyped-defs
-    pylint elia -d C0301 -d C0116 -d C0114 -d E0401 -d W0613 --fail-under=7
